<resources>
    <string name="app_name">Eventive</string>
    <string name="deconectare">Deconectare</string>
    <string name="informatii_utile_aplicatie">Informatii utile aplicatie</string>
    <string name="setari_cont">Setari cont</string>
    <string name="evenimentele_mele">Rezervarile mele</string>
    <string name="bun_venit_in_cont">Bun venit in cont! :)</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="confirma_parola">Confirma parola</string>
    <string name="inregistreaza_te">Inregistreaza-te!</string>
    <string name="ai_deja_un_cont_conecteaza_te">Ai deja un cont? Conecteaza-te!</string>
    <string name="client">Client</string>
    <string name="furnizor_de_servicii">Furnizor de servicii</string>
    <string name="selectati_tipul_de_utilizator">Selectati tipul de utilizator. :)</string>
    <string name="contul_meu">Contul meu</string>
    <string name="locatie">Locatie</string>
    <string name="catering">Catering</string>
    <string name="decoratiuni">Decoratiuni</string>
    <string name="muzica">Muzica</string>
    <string name="foto_video">Foto-Video</string>
    <string name="personal">Personal</string>
    <string name="ceremonii_religioase">Ceremonii religioase</string>
    <string name="aranjamente_florale">Aranjamente florale</string>
    <string name="papetarie">Papetarie</string>
    <string name="animatie_si_divertisment">Animatie si divertisment</string>
    <string name="marturii_si_cadouri">Marturii si cadouri</string>
    <string name="altele">Altele</string>
    <string name="conecteaza_te">Conecteaza-te!</string>
    <string name="sari_peste"><![CDATA[Sari peste >]]></string>
    <string name="nu_ai_un_cont_inregistreaza_te">Nu ai un cont? Inregistreaza-te!</string>
    <string name="serviciile_mele">Serviciile mele</string>
    <string name="stergere">Stergere</string>
    <string name="denumire">Denumire</string>
    <string name="denumire_furnizor">Furnizor</string>
    <string name="nu_exista_date">Nu exista date.</string>
    <string name="adauga_produsul_sau_serviciul_tau">Adauga produsul sau serviciul tau!</string>
    <string name="denumire_produs_serviciu">Denumire produs/serviciu</string>
    <string name="scurta_descriere">Scurta descriere</string>
    <string name="pret">Pret</string>
    <string name="introduceti_pretul">Introduceti pretul</string>
    <string name="introduceti_numele_furnizorului">Introduceti numele furnizorului</string>
    <string name="eroare_denumire_pred_serv">Introduceti denumirea produsului sau serviciului!</string>
    <string name="produsul_serviciul_tau_aici">Produsul/serviciul tau aici.</string>
    <string name="fa_o_rezervare">Fa o rezervare</string>
    <string name="data_evenimentului_tau">Data evenimentului tau:</string>
    <string name="rezerva">+ Rezerva acum!</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Telefon</string>
    <string name="alte_produse_servicii">Alte produse/servicii</string>
    <string name="detalii_cont">Detalii cont</string>
    <string name="introduceti_emailul">Introduceti emailul</string>
    <string name="introduceti_numarul_de_telefon">Introduceti numarul de telefon</string>
    <string name="salveaza_detaliile">Salveaza detaliile</string>
    <string name="introduceti_o_descriere">Introduceti o descriere!</string>
    <string name="introduceti_pretul_">Introduceti pretul!</string>
    <string name="introduceti_denumirea_furnizorului">Introduceti denumirea furnizorului!</string>
    <string name="introduceti_adresa">Introduceti adresa!</string>
    <string name="introduceti_nr_telefon">Introduceti numarul de telefon!</string>
    <string name="introduceti_email">Introduceti emailul!</string>
    <string name="nu_exista_date_despre_acest_furnizor">Nu exista date despre acest furnizor.</string>
    <string name="versiunea_1_0">versiunea 1.0</string>
    <string name="contactati_ne_pe_adresa_de_email">Contactati-ne pe adresa de email</string>
    <string name="help_eventive_gmail_com">help.eventive@gmail.com</string>
    <string name="aplicatie_dezvoltata_sub_indrumarea">Aplicatie dezvoltata sub indrumarea catedrei de Dispozitive si Aplicatii Mobile</string>
    <string name="pdm_ase_ro">pdm.ase.ro</string>
    <string name="sau_la_numarul_de_telefon">sau la numarul de telefon</string>
    <string name="acorda_o_nota_aplicatiei">Acorda o nota aplicatiei</string>
    <string name="client_caps">CLIENT</string>
    <string name="furnizor_caps">FURNIZOR</string>
    <string name="data_rezervarii">Data rezervarii</string>
    <string name="starea_rezervarii">Starea rezervarii</string>
    <string name="contacteaza_furnizorul">Contacteaza furnizorul</string>
    <string name="contacteaza_clientul">Contacteaza clientul</string>
    <string name="photo_upload_succes">Fotografia a fost incarcata cu succes.</string>
    <string name="photo_upload_fail">Incarcarea fotografiei a esuat.</string>

    <string-array name="categorii">
        <item>Locatie</item>
        <item>Catering</item>
        <item>Decoratiuni</item>
        <item>Muzica</item>
        <item>Foto-Video</item>
        <item>Personal</item>
        <item>Ceremonii religioase</item>
        <item>Aranjamente florale</item>
        <item>Papetarie</item>
        <item>Animatie si divertisment</item>
        <item>Marturii si cadouri</item>
        <item>Altele</item>
    </string-array>
</resources>
