<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VizualizareServiciuActivity"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/vizualizare_serviciu_imagine"
                android:layout_margin="16dp"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_gravity="center"
                android:src="@drawable/eventive_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:text="@string/denumire_produs_serviciu"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/vizualizare_serviciu_denumire_serviciu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:fontFamily="casual"
                android:text="@string/produsul_serviciul_tau_aici"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:text="@string/scurta_descriere"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/vizualizare_serviciu_descriere_serviciu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:fontFamily="casual"
                android:text="@string/produsul_serviciul_tau_aici"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:text="@string/pret"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/vizualizare_serviciu_pret_serviciu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:fontFamily="casual"
                android:text="@string/produsul_serviciul_tau_aici"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:text="@string/denumire_furnizor"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/vizualizare_serviciu_nume_furnizor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:fontFamily="casual"
                android:text="@string/produsul_serviciul_tau_aici"
                android:textColorLink="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                style="@style/Divider"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:text="@string/fa_o_rezervare"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="casual"
                android:text="@string/data_evenimentului_tau"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <DatePicker
                android:id="@+id/vizualizare_serviciu_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            </DatePicker>

            <android.support.v7.widget.CardView
                android:id="@+id/vizualizare_serviciu_buton_rezervare"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="36dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/signup_inregistrare">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="casual"
                        android:text="@string/rezerva"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>